<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_vector"
            android:title="@string/home" />
        <item
            android:id="@+id/listFragment"
            android:icon="@drawable/ic_vector__1_"
            android:title="@string/list" />
        <item
            android:id="@+id/saveFragment"
            android:icon="@drawable/ic_vector__2_"
            android:title="@string/save" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_vector__3_"
            android:title="@string/profile" />
    </group>
</menu>